--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     </spam>
                     <s class="sec-price">&dollar;169.99</s>
                 </div>
-                <button><img src="images/icon-cart.svg"> Add to Cart</button>
+                <button><img src="images/icon-cart.svg" alt="icon card"> Add to Cart</button>
             </article>
         </section>
     </main>
