--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                 <p>A Floral, solar and voluptuous interpration composed by Olivier Polge, Perfumer-creator for the House
                     of CHANEL.</p>
                 <div class="product">
-                    <spam class="price">&dollar;149.99
-                    </spam>
+                    <div class="price">&dollar;149.99
+                    </div>
                     <s class="sec-price">&dollar;169.99</s>
                 </div>
                 <button><img src="images/icon-cart.svg" alt="icon card"> Add to Cart</button>
